[Fix] Increases contrast in boxes and buttons.

--- a/themes/wwwevergreen/css/src/smacss/base/_buttons.scss
+++ b/themes/wwwevergreen/css/src/smacss/base/_buttons.scss
@@ -82,7 +82,7 @@ input.prime{
 	text-shadow: 0 -1px 0 $drop-shadow;
 	// decoration
 	background-color: mix($shade, $evergreen-neue, 40%);  // IE 9
-	background-image: linear-gradient(mix($shade, $evergreen-neue, 20%), mix($shade, $evergreen-neue, 40%);
+	background-image: linear-gradient(mix($shade, $evergreen-neue, 20%), mix($shade, $evergreen-neue, 40%));
 	border-color: $evergreen-old-style;
 }
 
